# damo-fsmn-vad-infer-httpserver

./: CMakeLists.txt  README.md
glog/src/: demangle_unittest.cc  googletest.h  symbolize.cc
infer/: FsmnVad.cc  FsmnVad.h  e2e_vad.h
model/: cmvn
poco/: CMakeLists.txt  MANIFEST  Makefile  VERSION  components
poco/Data/SQLite/src/: SQLiteException.cpp  sqlite3.h
poco/Foundation/include/Poco/: Pipe.h  Task.h
poco/Foundation/src/: deflate.c  inflate.h  pcre_compile.c  zlib.h
poco/Net/include/Poco/Net/: DialogSocket.h
poco/Net/src/: MailMessage.cpp
poco/Redis/include/Poco/Redis/: Client.h  Type.h
poco/Zip/doc/: ZIP Spec.txt
poco/cmake/: PocoMacros.cmake
utils/: wav.h
